--- a/portfolio.html
+++ b/portfolio.html
@@ -13,44 +13,42 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/main.min.css" />
 </head>
 
 <body>
-  <header class="header-portfolio header">
-    <section class="header-section">
-      <div class="container header-container">
-        <nav class="site-nav">
-          <div class="header-logo">
-            <a href="" class="logo link"><span class="web">Web</span>Studio</a>
-          </div>
-          <ul class="header-list list">
-            <li class="header-item list">
-              <a class="header-link link" href="index.html">Студия</a>
-            </li>
-            <li class="header-item list">
-              <a class="header-link link accent-page" href="portfolio.html">Портфолио</a>
-            </li>
-            <li class="header-item list">
-              <a class="header-link link" href="">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <ul class="contact-list list">
-          <li class="contact-list list">
-            <a class="contact-link link" href="mailto:info@devstudio.com"><svg class="contact-icon" width="16"
-                height="12">
-                <use href="./images/sprite-icon.svg#icon-link-mail"></use>
-              </svg>info@devstudio.com</a>
+  <header class="header">
+    <div class="container header-container">
+      <nav class="site-nav">
+        <div class="logotip">
+          <a href="" class="logotip__header-logo link"><span class="logotip__header-logo-web">Web</span>Studio</a>
+        </div>
+        <ul class="site-nav__list list">
+          <li class="site-nav__item list">
+            <a class="site-nav__item-link link accent-page" href="index.html">Студия</a>
           </li>
-          <li>
-            <a class="contact-link link" href="tel:+380961111111"><svg class="contact-icon" width="10" height="16">
-                <use href="./images/sprite-icon.svg#icon-link-phone"></use>
-              </svg>+38 096 111 11 11</a>
+          <li class="site-nav__item list">
+            <a class="site-nav__item-link link" href="portfolio.html">Портфолио</a>
+          </li>
+          <li class="site-nav__item list">
+            <a class="site-nav__item-link link" href="">Контакты</a>
           </li>
         </ul>
-      </div>
-    </section>
+      </nav>
+      <ul class="contact-list list">
+        <li class="contact-list__item list">
+          <a class="contact-list__link link" href="mailto:info@devstudio.com"><svg class="contact-icon" width="16"
+              height="12">
+              <use href="./images/sprite-icon.svg#icon-link-mail"></use>
+            </svg>info@devstudio.com</a>
+        </li>
+        <li class="contact-list__item list">
+          <a class="contact-list__link link" href="tel:+380961111111"><svg class="contact-icon" width="10" height="16">
+              <use href="./images/sprite-icon.svg#icon-link-phone"></use>
+            </svg>+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </div>
   </header>
   <main>
     <section class="portfolio-section">
@@ -201,16 +199,16 @@
     <div class="container footer-container">
       <address>
         <div class="footer-logo">
-          <a class="logo-footer link" href=""><span class="web">Web</span>Studio</a>
+          <a class="footer-logo_link link" href=""><span class="logotip__header-logo-web">Web</span>Studio</a>
         </div>
         <ul class="list contact footer-link">
           <li class="footer-item">
             <a class="address link" href="">г. Киев, пр-т Леси Украинки, 26г.</a>
           </li>
-          <li class="footer-item">
+          <li class="footer-item__link">
             <a class="contact-link footer-contact link" href="mailto:info@example.com">info@example.com</a>
           </li>
-          <li class="footer-item">
+          <li class="footer-item__link">
             <a class="contact-link footer-contact link" href="tel:+380991111111">+38 099 111 11 11</a>
           </li>
         </ul>
@@ -218,28 +216,28 @@
       <div class="footer-social-container">
         <h3 class="footer-title">ПРИСОЕДИНЯЙТЕСЬ</h3>
         <ul class="footer-social-list list">
-          <li class="footer-social-item footer-item">
+          <li class="footer-social-list__item footer-item">
             <a class="footer-social-link" href="">
               <svg class="footer-icon">
                 <use href="./images/sprite-icon.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
-          <li class="footer-social-item">
+          <li class="footer-social-list__item">
             <a class="footer-social-link" href="">
               <svg class="footer-icon">
                 <use href="./images/sprite-icon.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
-          <li class="footer-social-item">
+          <li class="footer-social-list__item">
             <a class="footer-social-link" href="">
               <svg class="footer-icon">
                 <use href="./images/sprite-icon.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
-          <li class="footer-social-item">
+          <li class="footer-social-list__item">
             <a class="footer-social-link" href="">
               <svg class="footer-icon">
                 <use href="./images/sprite-icon.svg#icon-linkedin"></use>
@@ -249,7 +247,7 @@
         </ul>
       </div>
       <div class="footer-form">
-        <p class="form-title">Подпишитесь на рассылку</p>
+        <p class="footer-form__title">Подпишитесь на рассылку</p>
         <form action class="form-email">
           <input type="email" class="form-in-email" name="email" id="email" placeholder="E-mail">
           <button type="submit" class="form-button">Подписаться
