--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="header-section">
     <div class="container header-container">
       <nav class="site-nav">
         <div class="logotip">
@@ -25,10 +25,10 @@
         </div>
         <ul class="site-nav__list list">
           <li class="site-nav__item list">
-            <a class="site-nav__item-link link accent-page" href="index.html">Студия</a>
+            <a class="site-nav__item-link link" href="index.html">Студия</a>
           </li>
           <li class="site-nav__item list">
-            <a class="site-nav__item-link link" href="portfolio.html">Портфолио</a>
+            <a class="site-nav__item-link accent-page link" href="portfolio.html">Портфолио</a>
           </li>
           <li class="site-nav__item list">
             <a class="site-nav__item-link link" href="">Контакты</a>
